# mnema

./: AGENT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-ja.md  README.md
crates/core/: Cargo.toml
crates/core/src/: assistant.rs  automation.rs  automation_log.rs  ids.rs  lib.rs  list.rs  llm_memory.rs  milestone.rs  project.rs  repository.rs  status.rs  task.rs  user_settings.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/infra/: Cargo.toml
crates/infra/migrations/: 202511240001_init.sql
crates/infra/src/: lib.rs
crates/infra/src/automation/: mod.rs
crates/infra/src/db/: defaults.rs  mod.rs  repositories.rs
crates/infra/src/llm/: factory.rs  mod.rs
crates/infra/tests/: db_repositories.rs
docs/: specification-v0.1.md
docs/docs/: development-plan.md
