[workspace]
members = ["crates/core", "crates/infra", "crates/desktop"]

resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["macros", "serde", "parsing", "formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
