[package]
name = "mnema-desktop"
version = "0.0.1"
edition = "2024"

[dependencies]
mnema-core = { path = "../core" }
mnema-infra = { path = "../infra" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.48", features = ["full"] }
time = { workspace = true }
