[package]
name = "mnema-infra"
version = "0.0.1"
edition = "2024"

[dependencies]
# core のドメインモデルを使う
mnema-core = { path = "../core" }

# workspace 共有
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# 非同期ランタイム
tokio = { version = "1.48", features = ["full"] }

# DB (SQLite)
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
] }

# HTTP クライアント(LLM / 将来の同期 API 用)
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }

# 設定ファイルなどで TOML を読む場合に使う
toml = "0.9.8"

[dev-dependencies]
tempfile = "3"
